Fix overflow issue on home screen
* set logo-container on a tag rather than div
* Rename incorrectly head tag 'head' to header in base.html.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,8 +27,11 @@ nav {
     display: flex;
     margin-top: 20px;
     height: 300px;
+    width: 100%;
     justify-content: center;
 }
+
+
 
 .logo-image {
     height: 100%;
